# transcriber

./: .gitignore  LICENSE  README.md  config.ini.example  main.py  publish.sh  pyproject.toml  requirements.txt
summscriber/: __init__.py  __main__.py  cli.py  gui.py
transcriber/: __init__.py  __main__.py  cli.py
