[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summscriber"
version = "0.1.0"
description = "Transcribe audio with Whisper (faster-whisper), with summarization (pysummarization, sumy, OpenAI) and short reply with OpenAI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = []
keywords = ["whisper", "transcription", "speech-to-text", "summarization", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "pysummarization>=1.1.0",
    "sumy>=0.11.0",
    "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/pablogventura/summscriber"
Homepage = "https://github.com/pablogventura/summscriber"

[project.scripts]
summscriber = "summscriber.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
publish = [
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["summscriber*"]
